# binary_log

./: .gitignore  .travis.yml  BUILDING.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  HACKING.md  LICENSE  README.md  clang_format.bash  single_include.json
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  binary_log_benchmark.cpp
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  empty_example.cpp  example.cpp
examples/: CMakeLists.txt
examples/billion_integers/: CMakeLists.txt  billion_integers.cpp
examples/constants/: CMakeLists.txt  constants.cpp
examples/function_template/: CMakeLists.txt  function_template.cpp
examples/hello_world/: CMakeLists.txt  hello_world.cpp
examples/ringbuffer/: CMakeLists.txt  ringbuffer.cpp
examples/run_length_encoding/: CMakeLists.txt  run_length_encoding.cpp
include/binary_log/: args.hpp  binary_log.hpp  constant.hpp  constant_wrapper.hpp  crc16.hpp  fixed_string.hpp  packer.hpp  string_utils.hpp  to_byte_array.hpp
include/binary_log/detail/: args.hpp  concepts.hpp  is_specialization.hpp  packer.hpp  ringbuffer_packer.hpp
single_include/binary_log/: binary_log.hpp
test/: CMakeLists.txt
test/source/: binary_log_test.cpp  doctest.hpp  test_packer.cpp
tools/: CMakeLists.txt
tools/unpacker/: CMakeLists.txt  argparse.hpp  index_file_parser.hpp  log_file_parser.hpp  mio.hpp  unpacker.cpp
